--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@nestjs/websockets": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "openai": "^4.52.0",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
